# Relic

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.default.yaml  pyproject.toml  relic-setup.bat  requirements.txt  test_e2e.py  test_integration.py  test_system.py  test_tui.py
docs/: _config.yml  app.js  index.html  style.css
src/relic/: __init__.py  cli.py
src/relic/core/: __init__.py  config.py  engine.py  session.py
src/relic/llm/: __init__.py  ollama_client.py  prompts.py
src/relic/modules/: __init__.py  api_testing.py  base.py  crypto_ssl.py  exploit.py  network.py  osint.py  post_exploit.py  recon.py  reporting.py  web.py
src/relic/ui/: __init__.py  app.py  theme.py
src/relic/vm/: __init__.py  manager.py
src/relic/web/: __init__.py  api.py
